feat: atualizacoes finais
